sumo/tests/duarouter/alternatives/style2_input/errors/routealt/routealt_last_negative/alts.duarouter
<?xml version="1.0"?>

<!-- generated on 07/15/08 10:43:41 by SUMO duarouter Version 0.9.7
<configuration>

   <input>
      <net-file>input_net.net.xml</net-file>
      <alternatives>input_alts.rou.xml.alt</alternatives>
   </input>

   <output>
      <output-file>routes.rou.xml</output-file>
   </output>

</configuration>
-->

<route-alternatives>
   <vtype model="SUMO_KRAUSS" id="KRAUSS_DEFAULT" accel="2.60" decel="4.50" sigma="0.50" length="5.00" maxspeed="70.00" tau="1.00" color="1,1,0"/>
   <vehicle id="0" type="KRAUSS_DEFAULT" depart="0">
      <routeDistribution last="0">
         <route cost="124.88" probability="1.00" edges="beg middle end rend"/>
      </routeDistribution>
   </vehicle>
</route-alternatives>
